fix(ui): Sidebar scroll not showing last element

--- a/packages/ui-components/src/Containers/Article/index.module.css
+++ b/packages/ui-components/src/Containers/Article/index.module.css
@@ -19,7 +19,7 @@
     @apply [grid-area:sidebar]
       lg:sticky
       lg:top-0
-      lg:h-[100vh]
+      lg:max-h-[calc(100vh-var(--header-height,0))]
       lg:overflow-y-auto;
   }
 
